--- a/Practica1/Práctica1.ParteIV.ipynb
+++ b/Practica1/Práctica1.ParteIV.ipynb
@@ -47,7 +47,8 @@
     "\n",
     "#### VARIABLES AUXILIARES:\n",
     "- Qué pilas corresponden a cada muelle, para el ejemplo planteado tendríamos lo siguiente:\n",
-    "     - **muelle(1,1,1,2,2,2)**\n",
+    "     - **muelle(0,0,0,1,1,1)**\n",
+    "         - Es decir, las pilas 0,1 y 2 están en el muelle 0, y las pilas 3,4 y 5 en el muelle 1.\n",
     "- Altura máxima de cada muelle, supongamos una altura máxima para las pilas de ambos muelles de 3:\n",
     "    - **altura_max(3,3)**\n",
     "\n",
@@ -86,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,16 +99,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "class ProblemaPuerto(Problem):\n",
     "    \n",
+    "    \n",
     "    def __init__(self, initial, goal=None):\n",
     "        self.goal = goal\n",
     "        Problem.__init__(self, initial, goal)\n",
-    "        \n",
+    "    \n",
+    "    \n",
     "    def actions(self, state):\n",
     "        a = []\n",
     "        \n",
@@ -120,9 +123,13 @@
     "        \n",
     "    \n",
     "    def _is_valid(self, pila):\n",
-    "        # Para este problema vamos a considerar que la altura máxima de las pilas, para ambos muelles, es de 3\n",
-    "        maxSize = 3\n",
-    "        if (len(pila[1]) == maxSize):\n",
+    "        pilas_muelles = (0,0,0,1,1,1) # Variable auxiliar que representa en qué muelle se encuentra pila\n",
+    "        altura_max = (3,3) # Variable auxiliar que representa la altura máxima de cada muelle\n",
+    "        \n",
+    "        num_pila = pila[0]\n",
+    "        pila_en_muelle = pilas_muelles[num_pila]\n",
+    "                \n",
+    "        if (len(pila[1]) == altura_max[pila_en_muelle]):\n",
     "            return False            \n",
     "        return True\n",
     "    \n",
@@ -133,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +149,7 @@
        "((0, (1, 7)), (1, (9, 10)), (2, (11,)), (3, (4, 8)), (4, (5, 3, 2)), (5, (6,)))"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +175,7 @@
        " (5, (6, 2, 8)))"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +219,7 @@
        " (5, 3)]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,10 +230,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "puerto.result(puerto.initial,(0,1))"
+   ]
   },
   {
    "cell_type": "markdown",
