--- a/Practica1/Práctica1.ParteIV.ipynb
+++ b/Practica1/Práctica1.ParteIV.ipynb
@@ -36,30 +36,37 @@
    "metadata": {},
    "source": [
     "#### REPRESENTACIÓN DE ESTADOS:\n",
-    "La representación de estados consiste en una tupla, donde cada elemento está formado por un par de tuplas:\n",
-    "- El primer elemento del par representa el número de pila, enumeradas del 0 a N-1, donde N es el número total de pilas.\n",
-    "- El segundo elemento representa los contenedores que están apilados en dicha pila, donde el contenedor que está en la base corresponde al primer elemento y así sucesivamente. Si una pila está vacía se presenta con \"()\". \n",
-    "\n",
+    "La representación de estados consiste en una tupla de N elementos que representa la informacíon de cada contenedor (donde la posición 0 representa la pila 1, la siguiente representa la pila 2, y así sucesivamente) formada por un par de tuplas: \n",
+    "- El primer elemento del par representa el número de la pila en la que se encuentra el contenedor.\n",
+    "- El segundo elemento representa la posición en la que se encuentra el contenedor en esa pila, siendo 0 la posición base y -1 la posición de la cima, Si en una pila solo hay un elemento entonces tendrá el valor -1.\n",
     "\n",
     "A continuación se muestra el estado inicial y final con la representación que se ha explicado anteriormente para el ejemplo que se nos ha planteado:\n",
-    "- **Estado inicial**: ((0, (1,7)), (1, (9,10)), (2, (11,)), (3, (4,8)), (4, (5,3,2)), (5, (6,)))\n",
-    "- **Estado final**: ((0, (1,7)), (1, (9,10,3)), (2, (11,4)), (3, ()), (4, (5,)), (5, (6,2,8)))\n",
+    "- **Estado inicial**: ((1,0), (5,-1), (5,1), (4,0), (5,0), (6,-1), (1,-1), (4,-1), (2,0), (2,-1), (3,-1))\n",
+    "- **Estado final**: Contenedores 3,4 y 7 en el muelle objetivo (muelle 1) y que dichos contenedores no tengan encima un contenedor no objetivo.\n",
     "\n",
     "#### VARIABLES AUXILIARES:\n",
     "- Qué pilas corresponden a cada muelle, para el ejemplo planteado tendríamos lo siguiente:\n",
-    "     - **muelle(0,0,0,1,1,1)**\n",
-    "         - Es decir, las pilas 0,1 y 2 están en el muelle 0, y las pilas 3,4 y 5 en el muelle 1.\n",
+    "     - **muelle(1,1,1,2,2,2)**\n",
+    "         - Es decir, las pilas 1,2 y 3 están en el muelle 1 (muelle objetivo), y las pilas 4,5 y 6 en el muelle 2.\n",
     "- Altura máxima de cada muelle, supongamos una altura máxima para las pilas de ambos muelles de 3:\n",
     "    - **altura_max(3,3)**\n",
     "\n",
     "#### ACCIÓN:\n",
     "- Solo tendríamos un única acción para este problema que sería mover un contenedor de una pila origen a una pila destino:\n",
     "    - **mover(pila_origen, pila_destino)**\n",
-    "- Con esta representación se puede deducir en qué muelle se encuentra el contenedor, qué grúa mueve dicho contenedor y si se usa una cintas transportadora.\n",
+    "- Con esta representación y mediante las variables auxiliares que se han definido, se puede sacar en qué muelle se encuentra el contenedor, qué grúa mueve dicho contenedor y si se usa una cinta transportadora.\n",
     "\n",
-    "#### OPERADORES: (No sé si está bien planteado lo que voy ajustificar ahora)\n",
+    "#### OPERADORES: \n",
     "El número de operadores (factor de ramificación) sería el número de pilas posibles a las que puede apilarse un contenedor.\n",
-    "Para el caso del ejemplo, tendríamos un factor de ramificación de 5.\n"
+    "Para el caso del ejemplo, tendríamos un factor de ramificación de 30 (6 contenedores x 5 pilas a las que puede apilarse el contenedor).\n",
+    "\n",
+    "#### COSTE:\n",
+    "- Si un contenedor se mueve a una pila destino que está en el mismo muelle que la pila origen: **Coste 1**\n",
+    "- Si un contenedor se mueve a una pila destino que no está en el mismo muelle que la pila origen:\n",
+    "    - Grúa correspondiente coge contenedor de pila origen + \n",
+    "    - Grúa correspondiente pone contenedor en la cinta transpotadora + \n",
+    "    - Grúa correspondiente coge contenedor de la pila transportadora + \n",
+    "    - Grúa correspondiente pone contenedor en pila destino = **Coste 4**"
    ]
   },
   {
@@ -73,7 +80,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En este caso, al ser el factor de ramificación muy grande, el algoritmo de búsqueda primero en anchura no es adecuado utilizarlo.\n",
+    "En este caso, al ser el factor de ramificación muy grande (30), no es adecuado utilizar el algoritmo de búsqueda primero en anchura.\n",
+    "\n",
     "\n",
     "(Yo creo que la mejor es búsqueda en profundidad con graph search, habría que mirarlo)\n"
    ]
@@ -87,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,39 +107,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
     "class ProblemaPuerto(Problem):\n",
     "    \n",
     "    \n",
-    "    def __init__(self, initial, goal=None):\n",
-    "        self.goal = goal\n",
+    "    def __init__(self, initial, goal=None):        \n",
     "        Problem.__init__(self, initial, goal)\n",
     "    \n",
     "    \n",
+    "    # Función que define las pilas a las que puede apilarse un contenedor\n",
     "    def actions(self, state):\n",
-    "        a = []\n",
+    "        # Por ejemplo para el estado inicial: ((1,0), (5,-1), (5,1), (4,0), (5,0), (6,-1), (1,-1), (4,-1), (2,0), (2,-1), (3,-1))\n",
+    "        # Las acciones posibles son: \n",
+    "        #        { 1: [2, 3, 4, 6], 2: [1, 2, 3, 4, 6], 3: [1, 2, 3, 4, 6], 4: [1, 2, 3, 6], 5: [1, 2, 3, 4, 6],\n",
+    "        #          6: [1, 2, 3, 4], 7: [2, 3, 4, 6], 8: [1, 2, 3, 6], 9: [1, 3, 4, 6], 10: [1, 3, 4, 6], 11: [1, 2, 4, 6] }\n",
     "        \n",
-    "        for pila_origen in state:            \n",
-    "            for pila_destino in state:\n",
-    "                if(pila_destino[0] != pila_origen[0]):\n",
-    "                    if(self._is_valid(pila_destino)):\n",
-    "                        a.append((pila_origen[0], pila_destino[0]))        \n",
+    "        # Donde la clave corresponde al número de contenedor y el valor es la lista de pilas donde puede apilarse \n",
+    "        # dicho contenedor\n",
+    "        \n",
+    "        a = {}\n",
+    "        \n",
+    "        for contenedor in state:                                \n",
+    "            if(contenedor[1] == -1):\n",
+    "                lista_pilas = []\n",
+    "                for pila in range (1,7):\n",
+    "                    if(pila != contenedor[0] and self._is_valid(state, pila)):\n",
+    "                        lista_pilas.append(pila)\n",
+    "                i = state.index(contenedor) + 1\n",
+    "                a[i] = lista_pilas\n",
+    "            \n",
     "        return a\n",
-    "        \n",
     "    \n",
-    "    def _is_valid(self, pila):\n",
-    "        pilas_muelles = (0,0,0,1,1,1) # Variable auxiliar que representa en qué muelle se encuentra pila\n",
+    "    # Función que muestra el resultado de realizar una acción a un estado dado\n",
+    "    def result(self, state, action):        \n",
+    "        res = ()\n",
+    "        i = state.index((action[0], -1))\n",
+    "        \n",
+    "        for contenedor in state:\n",
+    "            if(state.index(contenedor) == i):\n",
+    "                res = res + ((action[1], -1),)\n",
+    "            else:\n",
+    "                res = res + (contenedor,)\n",
+    "        \n",
+    "        return res\n",
+    "        \n",
+    "    # Función que cuenta el número de contenedores que hay en una pila dada\n",
+    "    def contenedores_en_pila(self, state, pila):\n",
+    "        n = 0\n",
+    "        \n",
+    "        for p in state:\n",
+    "            if(p[0] == pila):\n",
+    "                n += 1\n",
+    "        \n",
+    "        return n\n",
+    "        \n",
+    "    # Función que determina si una pila de un muelle correspondiente no ha llegado a su altura máxima y por tanto se puede \n",
+    "    # apilar otro contenedor    \n",
+    "    def _is_valid(self, state, pila):\n",
+    "            \n",
+    "        pilas_muelles = (1,1,1,2,2,2) # Variable auxiliar que representa en qué muelle se encuentra pila\n",
     "        altura_max = (3,3) # Variable auxiliar que representa la altura máxima de cada muelle\n",
     "        \n",
-    "        num_pila = pila[0]\n",
-    "        pila_en_muelle = pilas_muelles[num_pila]\n",
+    "        muelle = pilas_muelles[pila-1]\n",
     "                \n",
-    "        if (len(pila[1]) == altura_max[pila_en_muelle]):\n",
+    "        if (self.contenedores_en_pila(state, pila) == altura_max[muelle-1]):\n",
     "            return False            \n",
     "        return True\n",
+    "    \n",
+    "    def coste_de_aplicar_accion(self, state, action):\n",
+    "        pilas_muelles = (1,1,1,2,2,2)\n",
+    "        \n",
+    "        muelle_pila_origen = pilas_muelles[action[0]-1]\n",
+    "        muelle_pila_destino = pilas_muelles[action[1]-1]\n",
+    "        \n",
+    "        if(muelle_pila_origen == muelle_pila_destino):\n",
+    "            return 1\n",
+    "        else:\n",
+    "            return 4\n",
+    "    \n",
+    "    \n",
+    "    # Función que determina si se ha llegado a un estado objetivo o no\n",
+    "    # def goal_test(self,state):\n",
+    "        \n",
+    "                        \n",
+    "      #  return True\n",
+    "            \n",
+    "            \n",
     "    \n",
     "    # Falta definir heuristica y probar algoritmos de búsqueda \n",
     "    \n",
@@ -140,86 +204,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((0, (1, 7)), (1, (9, 10)), (2, (11,)), (3, (4, 8)), (4, (5, 3, 2)), (5, (6,)))"
+       "((1, 0),\n",
+       " (5, -1),\n",
+       " (5, 1),\n",
+       " (4, 0),\n",
+       " (5, 0),\n",
+       " (6, -1),\n",
+       " (1, -1),\n",
+       " (4, -1),\n",
+       " (2, 0),\n",
+       " (2, -1),\n",
+       " (3, -1))"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "puerto = ProblemaPuerto(((0,(1,7)),(1,(9,10)),(2,(11,)),(3,(4,8)),(4,(5,3,2)),(5,(6,))), ((0, (1,7)), (1, (9,10,3)), (2, (11,4)), (3,()), (4, (5,)), (5, (6,2,8))))\n",
+    "puerto = ProblemaPuerto(((1,0), (5,-1), (5,1), (4,0), (5,0), (6,-1), (1,-1), (4,-1), (2,0), (2,-1), (3,-1)))\n",
     "puerto.initial"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((0, (1, 7)),\n",
-       " (1, (9, 10, 3)),\n",
-       " (2, (11, 4)),\n",
-       " (3, ()),\n",
-       " (4, (5,)),\n",
-       " (5, (6, 2, 8)))"
+       "1"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "puerto.goal"
+    "puerto.coste_de_aplicar_accion(puerto.initial, (1,3))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(0, 1),\n",
-       " (0, 2),\n",
-       " (0, 3),\n",
-       " (0, 5),\n",
-       " (1, 0),\n",
-       " (1, 2),\n",
-       " (1, 3),\n",
-       " (1, 5),\n",
-       " (2, 0),\n",
-       " (2, 1),\n",
-       " (2, 3),\n",
-       " (2, 5),\n",
-       " (3, 0),\n",
-       " (3, 1),\n",
-       " (3, 2),\n",
-       " (3, 5),\n",
-       " (4, 0),\n",
-       " (4, 1),\n",
-       " (4, 2),\n",
-       " (4, 3),\n",
-       " (4, 5),\n",
-       " (5, 0),\n",
-       " (5, 1),\n",
-       " (5, 2),\n",
-       " (5, 3)]"
+       "4"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 145,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "puerto.coste_de_aplicar_accion(puerto.initial, (1,5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{2: [1, 2, 3, 4, 6],\n",
+       " 6: [1, 2, 3, 4],\n",
+       " 7: [2, 3, 4, 6],\n",
+       " 8: [1, 2, 3, 6],\n",
+       " 10: [1, 3, 4, 6],\n",
+       " 11: [1, 2, 4, 6]}"
+      ]
+     },
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,22 +300,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "()"
+       "((1, 0),\n",
+       " (6, -1),\n",
+       " (5, 1),\n",
+       " (4, 0),\n",
+       " (5, 0),\n",
+       " (6, -1),\n",
+       " (1, -1),\n",
+       " (4, -1),\n",
+       " (2, 0),\n",
+       " (2, -1),\n",
+       " (3, -1))"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "puerto.result(puerto.initial,(0,1))"
+    "test = puerto.result(puerto.initial, (5, 6))\n",
+    "test"
    ]
   },
   {
